--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <header class="header">
-    barra
+    <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
   </header>
+
+  <!-- scripts -->
+  <script src="script.js"></script>
 </body>
 </html>
