--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
   <header class="header">
-    barra
+    <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+    <form class="trybewarts-login" action="" method="get">
+      <input id="email" type="text" name="email" placeholder="Email">
+      <input id="senha" type="text" name="password" placeholder="Password">
+      <button id="login" type="submit">Entrar</button>
+    </form>
   </header>
+  <script src="script.js"></script>
 </body>
 </html>
