--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
     <form class="trybewarts-login" action="" method="get">
       <input id="email" type="text" name="email" placeholder="Email">
-      <input id="senha" type="text" name="password" placeholder="Password">
+      <input id="senha" type="password" name="password" placeholder="Password">
       <button id="login" type="submit">Entrar</button>
     </form>
   </header>
