--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <main class="container">  
   <form class="container" id="evaluation-form" action="" method="get">
-
   </form>
+  <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
   </main>
 
   <script src="script.js"></script>
