--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
   <main class="container">  
   <form class="container" id="evaluation-form" action="" method="get">
+    <input type="text" id="input-name" placeholder="Nome">
+    <input type="text" id="input-lastname" placeholder="Sobrenome">
+    <input type="text" id="input-email" placeholder="Email">
   </form>
   <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
   </main>
