--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     </form>
   </header>
 
-  <main class="container">  
-  <form class="container" id="evaluation-form" action="" method="get">
+  <main class="main-container">  
+  <form class="form-container" id="evaluation-form" action="" method="get">
+    <div class="sub-container">
     <input type="text" id="input-name" placeholder="Nome">
     <input type="text" id="input-lastname" placeholder="Sobrenome">
+    </div>
+    <div class="sub-container">
     <input type="text" id="input-email" placeholder="Email">
     <select name="" id="house">
       <option id="gitnoria-house" value="Gitnória">Gitnória</option>
@@ -29,6 +32,7 @@
       <option id="corvinode-house" value="Corvinode">Corvinode</option>
       <option id="pytherina-house" value="Pytherina">Pytherina</option>
     </select>
+    </div>
   </form>
 
   <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
