--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <input type="text" id="input-name" placeholder="Nome">
     <input type="text" id="input-lastname" placeholder="Sobrenome">
     </div>
+    
     <div class="sub-container">
     <input type="text" id="input-email" placeholder="Email">
     <select name="" id="house">
@@ -32,6 +33,13 @@
       <option id="corvinode-house" value="Corvinode">Corvinode</option>
       <option id="pytherina-house" value="Pytherina">Pytherina</option>
     </select>
+    </div>
+
+    <div class="sub-container"></div>
+    <label id="label-family" for="family">Qual sua família?</label>
+    <input type="radio" name="family" value="Frontend">Frontend
+    <input type="radio" name="family" value="Backend">Backend
+    <input type="radio" name="family" value="FullStack">FullStack
     </div>
   </form>
 
