--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <main class="main-container">  
   <form class="form-container" id="evaluation-form" action="" method="get">
+
     <div class="sub-container">
     <input type="text" id="input-name" placeholder="Nome">
     <input type="text" id="input-lastname" placeholder="Sobrenome">
@@ -35,12 +36,19 @@
     </select>
     </div>
 
-    <div class="sub-container"></div>
     <label id="label-family" for="family">Qual sua família?</label>
     <input type="radio" name="family" value="Frontend">Frontend
     <input type="radio" name="family" value="Backend">Backend
     <input type="radio" name="family" value="FullStack">FullStack
-    </div>
+
+    <label id="label-content" for="">Qual conteúdo você está com mais vontade de aprender?</label>
+    <input type="checkbox" name="" id="" value="HoFs">HoFs
+    <input type="checkbox" name="" id="" value="Jest">Jest
+    <input type="checkbox" name="" id="" value="Promises">Promises
+    <input type="checkbox" name="" id="" value="React">React
+    <input type="checkbox" name="" id="" value="SQL">SQL
+    <input type="checkbox" name="" id="" value="Python">Python
+  </div>
   </form>
 
   <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
