--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     <input type="radio" name="rate" value="9">9
     <input type="radio" name="rate" value="10">10
     </div>
+
+    <label class="textarea" for="textarea">Deixe seu comentário:</label>
+    <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
   </form>
 
   <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
