--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 
     <label class="textarea" for="textarea">Deixe seu comentário:</label>
     <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+
+    <div class="sub-container">
+    <label id="label-infos" for="">Você concorda com o uso das informações acima?</label>
+    <input type="checkbox" name="" id="agreement">
+    </div>
   </form>
 
   <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
