--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
     <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
 
     <div class="sub-container">
-    <label id="label-infos" for="">Você concorda com o uso das informações acima?</label>
-    <input type="checkbox" name="" id="agreement">
+    <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
+    <input type="checkbox" name="agreement" id="agreement">
     </div>
+
+    <button id="submit-btn" type="submit">Enviar</button>
   </form>
 
   <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
