--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
     <button id="submit-btn" type="submit">Enviar</button>
   </form>
-
-  <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
-
+    <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
   </main>
+
+    <footer>Direitos reservados à Trybewarts©</footer>
 
   <script src="script.js"></script>
 </body>
