--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="sub-container">
     <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
-    <input type="checkbox" name="agreement" id="agreement">
+    <input type="checkbox" name="agreement" id="agreement" disabled>
     </div>
 
     <button id="submit-btn" type="submit">Enviar</button>
