--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
     <div class="sub-container">
     <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
-    <input type="checkbox" name="agreement" id="agreement" disabled>
+    <input type="checkbox" name="agreement" id="agreement">
     </div>
 
-    <button id="submit-btn" type="submit">Enviar</button>
+    <button id="submit-btn" type="submit" disabled>Enviar</button>
   </form>
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
   </main>
