--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </div>
 
     <label class="textarea" for="textarea">Deixe seu comentário:</label>
+    <p id="counter"></p>
     <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
 
     <div class="sub-container">
