--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
     </div>
 
     <label id="label-family" for="family">Qual sua família?</label>
-    <input type="radio" name="family" value="Frontend">Frontend
-    <input type="radio" name="family" value="Backend">Backend
-    <input type="radio" name="family" value="FullStack">FullStack
+    <input class="family" type="radio" name="family" value="Frontend">Frontend
+    <input class="family" type="radio" name="family" value="Backend">Backend
+    <input class="family" type="radio" name="family" value="FullStack">FullStack
 
     <label id="label-content" for="">Qual conteúdo você está com mais vontade de aprender?</label>
-    <input type="checkbox" name="" id="" value="HoFs">HoFs
-    <input type="checkbox" name="" id="" value="Jest">Jest
-    <input type="checkbox" name="" id="" value="Promises">Promises
-    <input type="checkbox" name="" id="" value="React">React
-    <input type="checkbox" name="" id="" value="SQL">SQL
-    <input type="checkbox" name="" id="" value="Python">Python
+    <input class="materias" type="checkbox" name="" id="" value="HoFs">HoFs
+    <input class="materias" type="checkbox" name="" id="" value="Jest">Jest
+    <input class="materias" type="checkbox" name="" id="" value="Promises">Promises
+    <input class="materias" type="checkbox" name="" id="" value="React">React
+    <input class="materias" type="checkbox" name="" id="" value="SQL">SQL
+    <input class="materias" type="checkbox" name="" id="" value="Python">Python
 
     <div class="sub-container">
     <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
-    <input type="radio" name="rate" value="1">1
-    <input type="radio" name="rate" value="2">2
-    <input type="radio" name="rate" value="3">3
-    <input type="radio" name="rate" value="4">4
-    <input type="radio" name="rate" value="5">5
-    <input type="radio" name="rate" value="6">6
-    <input type="radio" name="rate" value="7">7
-    <input type="radio" name="rate" value="8">8
-    <input type="radio" name="rate" value="9">9
-    <input type="radio" name="rate" value="10">10
+    <input class="rate" type="radio" name="rate" value="1">1
+    <input class="rate" type="radio" name="rate" value="2">2
+    <input class="rate" type="radio" name="rate" value="3">3
+    <input class="rate" type="radio" name="rate" value="4">4
+    <input class="rate" type="radio" name="rate" value="5">5
+    <input class="rate" type="radio" name="rate" value="6">6
+    <input class="rate" type="radio" name="rate" value="7">7
+    <input class="rate" type="radio" name="rate" value="8">8
+    <input class="rate" type="radio" name="rate" value="9">9
+    <input class="rate" type="radio" name="rate" value="10">10
     </div>
 
     <label class="textarea" for="textarea">Deixe seu comentário:</label>
