requisito 21 [falta matérias]

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <input class="family" type="radio" name="family" value="FullStack">FullStack
 
     <label id="label-content" for="">Qual conteúdo você está com mais vontade de aprender?</label>
-    <input class="materias" type="checkbox" name="" id="" value="HoFs">HoFs
-    <input class="materias" type="checkbox" name="" id="" value="Jest">Jest
-    <input class="materias" type="checkbox" name="" id="" value="Promises">Promises
-    <input class="materias" type="checkbox" name="" id="" value="React">React
-    <input class="materias" type="checkbox" name="" id="" value="SQL">SQL
-    <input class="materias" type="checkbox" name="" id="" value="Python">Python
+    <input class="subject" type="checkbox" name="" id="" value="HoFs">HoFs
+    <input class="subject" type="checkbox" name="" id="" value="Jest">Jest
+    <input class="subject" type="checkbox" name="" id="" value="Promises">Promises
+    <input class="subject" type="checkbox" name="" id="" value="React">React
+    <input class="subject" type="checkbox" name="" id="" value="SQL">SQL
+    <input class="subject" type="checkbox" name="" id="" value="Python">Python
 
     <div class="sub-container">
     <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
